fix(icon): fix icon misalignment

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -116,7 +116,6 @@ main {
   position: absolute !important;
 
   left: 12px;
-  margin-top: 6px;
   filter: drop-shadow(0 0 4px rgba(0, 0, 0, .28));
 }
 
